config/tekton-pipelines/tekton-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
  - host: "tekton.kywa.io"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: tekton-dashboard
            port:
              number: 9097
  tls:
  - hosts:
    - tekton.kywa.io
