config/tekton-pipelines/tekton-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: tekton-dashboard
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  host: tekton.apps.okd.kywa.io
  port:
    targetPort: 9097
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: tekton-dashboard
    weight: 100
  wildcardPolicy: None
